tests/baselines/reference/functionCall9.errors.txt
tests/cases/compiler/functionCall9.ts(4,11): error TS2345: Argument of type '"bar"' is not assignable to parameter of type '数字'.
tests/cases/compiler/functionCall9.ts(5,1): error TS2554: Expected 0-2 arguments, but got 3.


==== tests/cases/compiler/functionCall9.ts (2 errors) ====
    function foo(a?:string, b?:number){};
    foo('foo', 1); 
    foo('foo'); 
    foo('foo','bar');
              ~~~~~
!!! error TS2345: Argument of type '"bar"' is not assignable to parameter of type '数字'.
    foo('foo', 1, 'bar');
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 0-2 arguments, but got 3.
    foo();